<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetPasswordActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_header"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:onClick="onClick"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_old_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:hint="@string/old_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/abl_header"
        app:layout_constraintStart_toStartOf="@id/abl_header"
        app:layout_constraintTop_toBottomOf="@+id/abl_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="25"
            android:textSize="@dimen/_14ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/new_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/et_old_password"
        app:layout_constraintStart_toStartOf="@id/et_old_password"
        app:layout_constraintTop_toBottomOf="@+id/et_old_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="25"
            android:textSize="@dimen/_14ssp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_reset"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/black"
        android:onClick="onClick"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@id/et_new_password"
        app:layout_constraintStart_toStartOf="@+id/et_new_password"
        app:layout_constraintTop_toBottomOf="@+id/et_new_password"
        tools:ignore="UnusedAttribute" />
</androidx.constraintlayout.widget.ConstraintLayout>